# lhvisual

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  rq1_citation_replacement.tex  rq1_reference_additions.bib  tsconfig.json  vite.config.ts
.github/workflows/: deploy-pages.yml
artifacts/repozero_time/: repozero_evidence.csv  summary.json
artifacts/repozero_time_main/: repozero_evidence.csv  (+1 more)
ops/: common.sh  install_submission_systemd.sh  setup_submission_env.sh  start_submission_stack.sh  start_submission_tunnel.sh  status_submission_stack.sh  stop_submission_stack.sh  stop_submission_tunnel.sh  sync_local_target_repo.sh  uninstall_submission_systemd.sh
public/: CNAME  site.webmanifest
scripts/: generate_benchmarks_data.py  repozero_time.py
src/: App.tsx  styles.css  vite-env.d.ts
submission_service/: README.md  __init__.py  pyproject.toml
submission_service/app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py  worker.py
submission_service/app/api/: __init__.py
submission_service/app/api/routes/: __init__.py  github.py  health.py  submissions.py
submission_service/app/jobs/: __init__.py  cleanup_submissions.py  process_submission.py
submission_service/app/services/: __init__.py  command_runner.py  github_auth.py  github_pr.py  harness_cli.py  oracle_runner.py  preflight.py  repo_checkout.py  status_events.py  storage.py
submission_service/tests/: __init__.py  conftest.py  test_github_auth.py  test_github_pr.py  test_preflight.py  test_submission_api.py
tmp_base58_test/: config  packed-refs
(+182 files in other folders)
